# annotate-version

./: .gitignore  README.rst  pyproject.toml
annotate_version/: __init__.py
