[tool.poetry]
name = "annotate-version"
version = "0.1.0"
description = ""
authors = ["Lars Viklund <zao@zao.se>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
plumbum = "^1.7.2"
zstandard = "^0.17.0"
ndjson = "^0.3.1"

[tool.poetry.scripts]
main = 'annotate_version:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

